WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193818
REGRESSION (PSON): After swipe back, first few attempts to swipe forward not recognized as swipe gestures
https://bugs.webkit.org/show_bug.cgi?id=193818
Summary
REGRESSION (PSON): After swipe back, first few attempts to swipe forward not ...
Antti Koivisto
Reported
2019-01-25 01:39:38 PST
We fail to hit RenderTreeSizeThreshold milestone.
Attachments
patch
(10.34 KB, patch)
2019-01-25 01:48 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(9.73 KB, patch)
2019-01-25 02:24 PST
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-highsierra-wk2
(2.51 MB, application/zip)
2019-01-25 03:38 PST
,
EWS Watchlist
no flags
Details
patch
(9.82 KB, patch)
2019-01-25 04:59 PST
,
Antti Koivisto
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-highsierra-wk2
(2.54 MB, application/zip)
2019-01-25 06:14 PST
,
EWS Watchlist
no flags
Details
patch
(10.15 KB, patch)
2019-01-25 06:34 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(10.14 KB, patch)
2019-01-25 06:38 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-01-25 01:39:45 PST
<
rdar://problem/47456584
>
Antti Koivisto
Comment 2
2019-01-25 01:48:51 PST
Created
attachment 360092
[details]
patch
Antti Koivisto
Comment 3
2019-01-25 02:24:10 PST
Created
attachment 360094
[details]
patch
EWS Watchlist
Comment 4
2019-01-25 03:38:24 PST
Comment on
attachment 360094
[details]
patch
Attachment 360094
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/10884844
New failing tests: swipe/pushState-cached-back-swipe.html
EWS Watchlist
Comment 5
2019-01-25 03:38:26 PST
Created
attachment 360099
[details]
Archive of layout-test-results from ews104 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Antti Koivisto
Comment 6
2019-01-25 04:59:54 PST
Created
attachment 360107
[details]
patch
EWS Watchlist
Comment 7
2019-01-25 06:14:15 PST
Comment on
attachment 360107
[details]
patch
Attachment 360107
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/10885969
New failing tests: http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html swipe/pushState-cached-back-swipe.html
EWS Watchlist
Comment 8
2019-01-25 06:14:16 PST
Created
attachment 360108
[details]
Archive of layout-test-results from ews107 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
Antti Koivisto
Comment 9
2019-01-25 06:34:53 PST
Created
attachment 360109
[details]
patch
Antti Koivisto
Comment 10
2019-01-25 06:38:25 PST
Created
attachment 360110
[details]
patch
WebKit Commit Bot
Comment 11
2019-01-25 12:20:23 PST
Comment on
attachment 360110
[details]
patch Clearing flags on attachment: 360110 Committed
r240493
: <
https://trac.webkit.org/changeset/240493
>
WebKit Commit Bot
Comment 12
2019-01-25 12:20:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug